# openwith

./: .gitignore  README.md  a564cdfab6ef4c63beb6-1.3.xpi  main.spec  pyproject.toml  pyside.spec  workspace.code-workspace
app/: main.py  pyside.py
browser_webextension/: background.js  manifest.json
