[tool.poetry]
name = "OpenWith"
version = "1.0.1"
description = "Websocket Server for Web Extension"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pyside6 = "^6.5.1.1"

[tool.poetry.dev-dependencies]


[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.13.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
